# data-forecast-generator_kip

./: .dockerignore  .env.example  .gitignore  CURRENT_SYSTEM_DOCUMENTATION.md  Dockerfile  FILES_CREATED.txt  IMPLEMENTATION_OUTLINE.md  INDEX.md  KIP_MidTermReview.pptx  QUICK_START.md  README.md  SETUP_SUMMARY.md  START_HERE.md  SYSTEM-DOCUMENTATION.md  data_forecast_generator_architecture.excalidraw  docker-compose.yml  flake.nix  pipeline.excalidraw  project-description.md  pyproject.toml
.agents/agents/: conductor.md  opportunity_analyst.md  pipeline_builder.md  quality_judge.md  result_interpreter.md
.agents/skills/: assess_forecast_opportunity.md  design_feedback_loop.md  inspect_model_metrics.md  judge_report_faithfulness.md  judge_run_quality.md  read_run_artifacts.md  validate_step_outputs.md  write_business_report.md
.agents/workflows/: phase_1_forecast_run.md  phase_2_judged_forecast_run.md
.github/: copilot-instructions.md
.github/agents/: Single Agent Pipeline.agent.md
.github/workflows/: tests.yml
docs/agentic-pipeline/: contracts.md  setup-prompt.md  step-prompts.md
docs/pipeline-framework/: 00-overview.md  00-pre_exploration.md  01-csv-read-cleansing.md  01-csv_read_and_cleansing.md  01-exploration.md  02-data_exploration.md  02-data_reading_and_cleansing.md  10-csv-read-cleansing.md  11-data-exploration.md  12-feature-extraction.md  13-model-training.md  14-model-evaluation.md  15-model-selection.md  16-result-presentation.md  17-critical-self-audit.md
docs/self-audit/: audit-rules.md  data-type-profiles.md  overview.md  remediation.md
output/20260410T172955Z/: code_audit.json  features.parquet  holdout.npz  progress.json  step-10-cleanse.json  step-11-exploration.json  step-12-features.json  step-13-training.json  step-14-evaluation.json  step-15-selection.json  step-16-report.md
output/20260410T181015Z/: code_audit.json  features.parquet  holdout.npz  progress.json  step-10-cleanse.json  step-11-exploration.json  step-12-features.json  step-13-training.json  step-14-evaluation.json  step-15-selection.json  step-16-report.md
output/20260410T184437Z/: cleaned.parquet  code_audit.json  features.parquet  holdout.npz  progress.json  step-10-cleanse.json  step-11-exploration.json  step-12-features.json  step-13-training.json  step-14-evaluation.json  step-15-selection.json  step-16-report.md
output/20260410T191647Z/: code_audit.json  holdout.npz  progress.json  step-10-cleanse.json  step-11-exploration.json  step-12-features.json  step-13-training.json  step-14-evaluation.json  step-15-selection.json  step-16-report.md
output/20260418T103757Z/: code_audit.json  features.parquet  holdout.npz  progress.json  step-10-cleanse.json  step-11-exploration.json  step-12-features.json  step-13-training.json  step-14-evaluation.json  step-15-selection.json  step-16-report.md
output/20260419T112818Z/: PIPELINE_SUMMARY.md  code_audit.json  features.parquet  holdout.npz  progress.json  step-10-cleanse.json  step-11-exploration.json  step-12-features.json
output/20260419T124100Z/: features.parquet  holdout.npz  leakage_audit.json  progress.json  step-00_data_profile_report.md  step-00_profiler.json  step-01-cleanse.json  step-11-exploration.json  step-12-features.json  step-13-training.json  step-14-evaluation.json  step-15-selection.json  step-16-report.md
output/20260419T124300Z/: cleaned.parquet  features.parquet  holdout.npz  progress.json  step-00_data_profile_report.md  step-00_profiler.json  step-01-cleanse.json  step-11-exploration.json  step-12-features.json  step-13-training.json  step-14-evaluation.json  step-15-selection.json  step-16-report.md
output/20260428T134926Z/: code_audit.json  features.parquet  holdout.npz  leakage_audit.json  progress.json  step-10-cleanse.json  step-11-exploration.json  step-12-features.json  step-13-training.json  step-14-evaluation.json  (+2 more)
scripts/: infer_model.py  plot_split_timeseries.py  run_agentic_prompts.sh  setup.sh  streamlit_inference_app.py  streamlit_single_agent_app.py
src/: portable_predictor.py  simple_models.py
steps/: 00-exploration.md  01-data_reading_and_cleansing.md
tests/: test_current_runtime_config.py  test_go_cli.py
(+77 files in other folders)
