[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-forecast-generator"
version = "0.1.0"
description = "Automated data analysis and regression forecasting using LLM-driven discovery"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Data Forecast Generator Contributors" }
]

dependencies = [
    "scikit-learn>=1.3.0",
    "polars>=1.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "statsmodels>=0.14.0",
    "scipy>=1.10.0",
    "pyarrow>=14.0.0",
    "joblib>=1.3.0",
    "tqdm>=4.66.0",
    "anthropic>=0.7.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[project.urls]
Repository = "https://github.com/your-org/data-forecast-generator"

[tool.uv]
required-version = ">=0.5.0"
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "W505",  # doc line too long
]

[tool.ruff.lint.isort]
known-first-party = []
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
strict_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow running tests",
]
